openshift/wildfly-rc-service-route.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    name: wildfly
    context: DevOpsDemo
  name: wf-ticketmonster-svc
spec: 
  ports:
  # the port that this service should serve on
  - port: 80
    targetPort: 8080
  # label keys and values that must match in order to receive traffic for this service
  selector: 
    name: wildfly
---
apiVersion: v1
kind: Route
metadata:
  name: wf-ticketmonster-route
spec:
  host: www.example.com  
  to:
    kind: Service
    name: wf-ticketmonster-svc
